# fastcampus-mlops

./: .gitignore  LICENSE
.github/workflows/: deploy-to-ecs.yaml
airflow/dags/: bigquery_airflow_example.py  bigquery_to_huggingface.py
aws/sagemaker/cifar-10/: trainer.py
dataflow/dags/: dataflow.py
dataflow/scripts/: dataflow_gcs_to_bigquery.py
docker/build-optimized/: Dockerfile  Dockerfile.base
docker/custom-load-balancer/: Dockerfile  docker-compose.yml
docker/custom_load_balancer/: docker-compose.yml  requirements.txt
docker/intro/: Dockerfile
docker/load_balancer/: Dockerfile  docker-compose.yml  locustfile.py
docker/service_with_mysql/: docker-compose.yml
kubeflow/katib/: Dockerfile  build.sh  requirements.txt  template.yaml  trainer.py
kubeflow/kserve/: get_resnet_request_data.py  handler.py  input.json  model.py  trainer.py
kubeflow/pipeline/: requirements.txt  sequential.py
kubernetes/introduction/: Dockerfile  build.sh  deploy.sh  logs.txt  requirements.txt
logging/pipeline/: .gitignore  docker-compose.yaml  filebeat.yml  logstash.conf  start_server.sh
mlflow/mnist/: Dockerfile  docker-compose.yaml  requirements.txt  train_and_register.py  trainer.py
movie_recommendation_part1/: Dockerfile
movie_recommendation_part1/app/: Dockerfile  pyproject.toml
movie_recommendation_part1/app/src/: main.py  settings.py
movie_recommendation_part1/app/src/model/: model.py  router.py  schemas.py
movie_recommendation_part1/deploy/: task-definition.json
notebooks/: Gemma 2B SFT.ipynb
testing/introduction/: add.py  pyproject.toml
(+16 files in other folders)
