[tool.poetry]
name = "movie_recommendation_app"
version = "0.1.0"
description = ""
authors = ["Sungmin Han <sniper45han@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
pydantic = "^2.6.1"
torch = "^2.2.0"
uvicorn = "^0.27.1"
pydantic-settings = "^2.2.0"
numpy = "^1.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
